Fix broken links

--- a/architecture/virtual-machine.adoc
+++ b/architecture/virtual-machine.adoc
@@ -29,7 +29,7 @@ There exists a field `spec.runStrategy` which can also be used to control the
 state of the associated VirtualMachineInstance object. To avoid confusing and
 contradictory states, these fields are mutually exclusive. An extended
 explanation of `spec.runStrategy` vs `spec.running` can be found in
-<<creating-virtual-machines/run-strategies.adoc#,Run Strategies>>.
+<<../creating-virtual-machines/run-strategies.adoc#,Run Strategies>> 
 
 Starting and stopping
 ^^^^^^^^^^^^^^^^^^^^^
@@ -109,8 +109,7 @@ $ virtctl expose virtualmachine vmi-ephemeral --name vmiservice --port 27017 --t
 
 All service exposure options that apply to a VirtualMachineInstance
 apply to a VirtualMachine. See
-http://www.kubevirt.io/user-guide/#/workloads/virtual-machines/expose-service[Exposing
-VirtualMachineInstance] for more details.
+<<../using-virtual-machines/expose-service.adoc#,Exposing VirtualMachineInstance>> for more details.
 
 When to use a VirtualMachine
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
