--- a/creating-virtual-machines/intro.adoc
+++ b/creating-virtual-machines/intro.adoc
@@ -78,9 +78,8 @@ What’s next
 -----------
 
 * More information about persistent and ephemeral volumes:
-link:workloads/virtual-machines/disks-and-volumes.md[Disks and Volumes]
+<<../creating-virtual-machines/disks-and-volumes.adoc#,Disks and Volumes>>
 * How to access a VirtualMachineInstance via `console` or `vnc`:
-link:workloads/virtual-machines/graphical-and-console-access.md[Graphical
-and Serial Console Access]
+<<../using-virtual-machines/graphical-and-console-access.adoc#,Graphical and Serial Console Access>>
 * How to customize VirtualMachineInstances with `cloud-init`:
-link:workloads/virtual-machines/startup-scripts.md[Startup Scripts]
+<<../creating-virtual-machines/startup-scripts.adoc#,Startup Scripts>>
