--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -106,11 +106,10 @@ The installation uses the KubeVirt operator, which manages lifecycle of all Kube
 
 [source,bash]
 ----
-$ export RELEASE=v0.17.0
-# creates KubeVirt operator
-$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/${RELEASE}/kubevirt-operator.yaml
-# creates KubeVirt KV custom resource
-$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/${RELEASE}/kubevirt-cr.yaml
+# Deploy the KubeVirt operator
+$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/v0.18.0/kubevirt-operator.yaml
+# Create the KubeVirt CR (instance deployment request)
+$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/v0.18.0/kubevirt-cr.yaml
 # wait until all KubeVirt components is up
 $ kubectl -n kubevirt wait kv kubevirt --for condition=Ready
 ----
