changelog: Update to 0.18
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/release-notes/changelog.adoc
+++ b/release-notes/changelog.adoc
@@ -1,5 +1,15 @@
 # Changelog
 
+## v0.18.0
+
+Released on: Wed Jun 5 22:25:09 2019 +0200
+
+- Build: Use of go modules
+- CI: Support for Kubernetes 1.13
+- Countless testcase fixes and additions
+- Several smaller bug fixes
+- Improved upgrade documentation
+
 ## v0.17.0
 
 Released on: Mon May 6 16:18:01 2019 +0200
