Apply PR feedback.

--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -178,6 +178,20 @@ Then `virtctl` can be used as a kubectl plugin. For a list of available commands
 $ kubectl virt help
 ----
 
+Every occurrence throughout this guide of
+
+[source,bash]
+----
+$ ./virtctl <command>...
+----
+
+should then be read as
+
+[source,bash]
+----
+$ kubectl virt <command>...
+----
+
 
 From Service Catalog as an APB
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
