--- a/creating-virtual-machines/dedicated-cpu.adoc
+++ b/creating-virtual-machines/dedicated-cpu.adoc
@@ -150,6 +150,9 @@ data:
 Sidecar containers and CPU allocation overhead
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+*Note:* In order to run sidecar containers, KubeVirt requires the `Sidecar` feature gate to be enabled by adding `Sidecar`
+to the `kubevirt-config` ConfigMap's `feature-gates` field.
+
 According to the Kubernetes CPU manager model, in order the POD would
 reach the required QOS level `Guaranteed`, all containers in the POD
 must express CPU and memory requirements. At this time, Kubevirt often
