Added v0.19.0 release notes
Signed-off-by: Marc Sluiter <msluiter@redhat.com>

--- a/release-notes/changelog.adoc
+++ b/release-notes/changelog.adoc
@@ -1,5 +1,27 @@
 # Changelog
 
+## v0.19.0
+
+Released on: Fri Jul 5 12:52:16 2019 +0200
+
+- Fixes when run on kind
+- Fixes for sub-resource RBAC
+- Limit pod network interface bindings
+- Many additional bug fixes in many areas
+- Additional testcases for updates, disk types, live migration with NFS
+- Additional testcases for memory over-commit, block storage, cpu manager,
+- Improvements around HyperV
+- Improved error handling for runStartegies
+- Improved update procedure
+- Improved network metrics reporting (packets and errors)
+- Improved guest overhead calculation
+- Improved SR-IOV testsuite
+- Support for live migration auto-converge
+- Support for config-drive disks
+- Support for setting a pullPolicy con containerDisks
+- Support for unprivileged VMs when using SR-IOV
+- Introduction of a project security policy
+
 ## v0.18.0
 
 Released on: Wed Jun 5 22:25:09 2019 +0200
