State that only N-1 to N is supported
Signed-off-by: Pablo Iranzo Gómez <Pablo.Iranzo@gmail.com>

--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -272,6 +272,10 @@ Update
 Zero downtime rolling updates are supported starting with release `v0.17.0`
 onward. Updating from any release prior to the KubeVirt `v0.17.0` release is
 not supported.
+______________________________________________________________________________________________________________________________________________________
+Note: Updating is only supported from N-1 to N release.
+______________________________________________________________________________________________________________________________________________________
+
  
 Updates are triggered one of two ways.
 
