Update typo in installation guide

--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -325,7 +325,7 @@ $ kubectl delete -f https://github.com/kubevirt/kubevirt/releases/download/${REL
 ----
 
 ______________________________________________________________________________________________________________________________________________________
-Note: If by mistake you deleted the operator first, the KV custom resource will stuck in the `Terminatig` state,
+Note: If by mistake you deleted the operator first, the KV custom resource will stuck in the `Terminating` state,
 to fix it, delete manually finalizer from the resource.
 
 [source,bash]
