--- a/creating-virtual-machines/interfaces-and-networks.adoc
+++ b/creating-virtual-machines/interfaces-and-networks.adoc
@@ -575,9 +575,12 @@ spec:
       networkName: sriov-net-crd
 ----
 
-Information on how to set up Intel SR-IOV device plugin can be found
-https://github.com/intel/sriov-network-device-plugin/blob/master/README.md[in
-their respective documentation].
+To simplify procedure, please use
+https://github.com/openshift/sriov-network-operator[OpenShift SR-IOV operator]
+to deploy and configure SR-IOV components in your cluster. On how to use the
+operator, please refer to
+https://github.com/openshift/sriov-network-operator/blob/master/doc/quickstart.md[their
+respective documentation].
 
 ______________________________________________________________________________
 *Note:* while the `sriov` mode is validated and tested using the Intel SR-IOV
