--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -4,6 +4,8 @@ Installation
 KubeVirt is a virtualization add-on to Kubernetes and this guide assumes
 that a Kubernetes cluster is already installed.
 
+If installed on OpenShift, the web console is extended for management of virtual machines.
+
 Requirements
 ~~~~~~~~~~~~
 
@@ -155,6 +157,13 @@ $ oc adm policy add-scc-to-user privileged -n kubevirt -z kubevirt-operator
 
 Once privileges are granted, the KubeVirt can be deployed as described above.
 
+Web user interface on OpenShift
+^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
+
+No additional steps are required to extend OpenShift's web console for KubeVirt.
+
+The virtualization extension is automatically enabled when KubeVirt deployment is detected.
+
 Client side `virtctl` deployment
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
@@ -246,25 +255,6 @@ https://github.com/kubevirt/kubevirt-ansible/tree/master/playbooks#network[netwo
 playbook] installs these plugins by default.
 ______________________________________________________________________________________________________________________________________________________
 
-Installing Web User Interface (optional)
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-When the KubeVirt is installed on OpenShift, the Web User Interface can be used to administer the virtual
-machines and other entities in the cluster in addition to the command line tools.
-
-The Web UI is installed by default within the kubevirt-ansible flow as described above.
-
-The Web UI URL can be retrieved from its Route object:
-----
-$ oc get route console -n kubevirt-web-ui
-----
-
-For manual installation, see https://github.com/kubevirt/web-ui-operator/blob/master/README.md[the web-ui-operator README] file.
-
-For additional details, see the https://github.com/kubevirt/web-ui[Web User Interface project].
-
-______________________________________________________________________________________________________________________________________________________
-Note: Kubevirt Web UI ansible playbook can be found https://github.com/kubevirt/kubevirt-ansible/blob/master/playbooks/kubevirt_web_ui.yml[here].
-______________________________________________________________________________________________________________________________________________________
 
 Update
 ~~~~~~
