Replace OpenShift by OKD
Signed-off-by: Marek Libra <marek.libra@gmail.com>

--- a/administration/api-validation.adoc
+++ b/administration/api-validation.adoc
@@ -61,11 +61,11 @@ development
 --admission-control='Initializers,NamespaceLifecycle,LimitRanger,ServiceAccount,DefaultStorageClass,DefaultTolerationSeconds,NodeRestriction,MutatingAdmissionWebhook,ValidatingAdmissionWebhook,ResourceQuota'
 ....
 
-Enabling KubeVirt Admission Controller on OpenShift
+Enabling KubeVirt Admission Controller on OKD
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-OpenShift also requires the admission control webhooks to be enabled at
-install time. The process is slightly different though. With OpenShift,
+OKD also requires the admission control webhooks to be enabled at
+install time. The process is slightly different though. With OKD,
 we enable webhooks using an admission plugin.
 
 These admission control plugins can be configured in openshift-ansible
