--- a/administration/monitoring.adoc
+++ b/administration/monitoring.adoc
@@ -102,7 +102,7 @@ spec:
       insecureSkipVerify: true
 ----
 
-Integrating with the OpenShift cluster-monitoring-operator
+Integrating with the OKD cluster-monitoring-operator
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 After the
