--- a/administration/node-eviction.adoc
+++ b/administration/node-eviction.adoc
@@ -6,7 +6,7 @@ ensure that VirtualMachineInstances have been gracefully terminated
 before powering down the node. Since all VirtualMachineInstances are
 backed by a Pod, the recommended method of evicting
 VirtualMachineInstances is to use the *kubectl drain* command, or in the
-case of OpenShift the *oc adm drain* command.
+case of OKD the *oc adm drain* command.
 
 How to Evict all VMs on a Node
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -180,7 +180,7 @@ the following command must be run.
 
 `kubectl uncordon <node name>`
 
-or in the case of OpenShift
+or in the case of OKD.
 
 `oc adm uncordon <node name>`
 
