--- a/creating-virtual-machines/dedicated-cpu.adoc
+++ b/creating-virtual-machines/dedicated-cpu.adoc
@@ -25,7 +25,7 @@ Additional information: *
 https://kubernetes.io/docs/tasks/administer-cluster/cpu-management-policies/[Enabling
 the CPU manager on Kubernetes] *
 https://docs.openshift.com/container-platform/3.10/scaling_performance/using_cpu_manager.html[Enabling
-the CPU manager on OpenShift] *
+the CPU manager on OKD] *
 https://kubernetes.io/blog/2018/07/24/feature-highlight-cpu-manager/[Kubernetes
 blog explaning the feature]
 
