--- a/creating-virtual-machines/interfaces-and-networks.adoc
+++ b/creating-virtual-machines/interfaces-and-networks.adoc
@@ -328,7 +328,7 @@ spec:
 ----
 
 
-This approach may not work for all plugins. For example, OpenShift SDN is not
+This approach may not work for all plugins. For example, OKD SDN is not
 compatible with `tuning` plugin.
 
 * Plugins that handle custom MAC addresses natively: `ovs`.
