Add privacy and netlify statement
Signed-off-by: Pablo Iranzo Gómez <Pablo.Iranzo@gmail.com>

--- a/welcome/index.adoc
+++ b/welcome/index.adoc
@@ -24,3 +24,10 @@ Developer
 * Start contributing:
 https://github.com/kubevirt/kubevirt/blob/master/CONTRIBUTING.md
 * API Reference: http://www.kubevirt.io/api-reference/
+
+
+Privacy
+~~~~~~~
+
+* Check our privacy policy at: https://kubevirt.io/privacy/
+* We do use https://netlify.com Open Source Plan for Rendering Pull Requests to the documentation repository
