--- a/administration/intro.adoc
+++ b/administration/intro.adoc
@@ -106,11 +106,10 @@ The installation uses the KubeVirt operator, which manages lifecycle of all Kube
 
 [source,bash]
 ----
-$ export RELEASE=v0.17.0
-# creates KubeVirt operator
-$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/${RELEASE}/kubevirt-operator.yaml
-# creates KubeVirt KV custom resource
-$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/${RELEASE}/kubevirt-cr.yaml
+# Deploy the KubeVirt operator
+$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/v0.21.0/kubevirt-operator.yaml
+# Create the KubeVirt CR (instance deployment request)
+$ kubectl apply -f https://github.com/kubevirt/kubevirt/releases/download/v0.21.0/kubevirt-cr.yaml
 # wait until all KubeVirt components is up
 $ kubectl -n kubevirt wait kv kubevirt --for condition=Available
 ----
@@ -214,13 +213,6 @@ You can find KubeVirt in the OpenShift Service Catalog and install it
 from there. In order to do that please follow the documentation in the
 https://github.com/ansibleplaybookbundle/kubevirt-apb[KubeVirt APB
 repository].
-
-Using Ansible playbooks
-^^^^^^^^^^^^^^^^^^^^^^^
-
-The https://github.com/kubevirt/kubevirt-ansible[kubevirt-ansible]
-project provides a collection of playbooks that installs KubeVirt and
-it’s related components on top of OpenShift or Kubernetes clusters.
 
 Deploying from Source
 ~~~~~~~~~~~~~~~~~~~~~
