--- a/welcome/index.adoc
+++ b/welcome/index.adoc
@@ -23,7 +23,7 @@ Developer
 
 * Start contributing:
 https://github.com/kubevirt/kubevirt/blob/master/CONTRIBUTING.md
-* API Reference: http://www.kubevirt.io/api-reference/
+* API Reference: http://kubevirt.io/api-reference/
 
 
 Privacy
