--- a/release-notes/changelog.adoc
+++ b/release-notes/changelog.adoc
@@ -12,7 +12,6 @@ Released on: Tue Dec 3 15:34:34 2019 +0100
 - Fix bug related to parallel scraping of Prometheus endpoints
 - Fix to reliably test VNC
 
-
 ## v0.23.0
 
 Released on: Mon Nov 4 16:42:54 2019 +0100
@@ -23,7 +22,6 @@ Released on: Mon Nov 4 16:42:54 2019 +0100
 - Cleaned up and fixed CRD scheme registration
 - Several bugfixes
 - Many CI improvements (e.g. more logs in case of test failures)
-
 
 ## v0.22.0
 
@@ -36,7 +34,6 @@ Released on: Thu Oct 10 18:55:08 2019 +0200
 - Many bug fixes and improvements in several areas
 - CI: Introduced a OKD 4 test lane
 - CI: Many improved tests, resulting in less flakyness
-
 
 ## v0.21.0
 
@@ -54,11 +51,11 @@ Released on: Mon Sep 9 09:59:08 2019 +0200
 - Drop spc_t from launcher
 - Add feature gates to security sensitive features
 
-
 ## v0.20.0
 
 Released on: Fri Aug 9 16:42:41 2019 +0200
 
+- Containerdisks are now secure and they are not copied anymore on every start.
 Old containerdisks can still be used in the same secure way, but new
 containerdisks can't be used on older kubevirt releases
 - Create specific SecurityContextConstraints on OKD instead of using the
@@ -89,7 +86,6 @@ KubeVirt CR conditions
   - Improved log gathering
   - Reduced amount of flaky tests
 
-
 ## v0.19.0
 
 Released on: Fri Jul 5 12:52:16 2019 +0200
@@ -113,7 +109,6 @@ headless mode
 - Support for unprivileged VMs when using SR-IOV
 - Introduction of a project security policy
 
-
 ## v0.18.0
 
 Released on: Wed Jun 5 22:25:09 2019 +0200
@@ -123,7 +118,6 @@ Released on: Wed Jun 5 22:25:09 2019 +0200
 - Countless testcase fixes and additions
 - Several smaller bug fixes
 - Improved upgrade documentation
-
 
 ## v0.17.0
 
@@ -140,7 +134,6 @@ Released on: Mon May 6 16:18:01 2019 +0200
 - Support for different VM run strategies (i.e manual and rerunOnFailure)
 - Several fixes for live-migration (TLS support, protected pods)
 
-
 ## v0.16.0
 
 Released on: Fri Apr 5 23:18:22 2019 +0200
@@ -153,7 +146,6 @@ Released on: Fri Apr 5 23:18:22 2019 +0200
 - Support for table input devices
 - Support for generating OLM metadata
 - Support for triggering VM live migration on node taints
-
 
 ## v0.15.0
 
@@ -177,7 +169,6 @@ Released on: Tue Mar 5 10:35:08 2019 +0100
 - Support to set a default CPU model
 - Update to go 1.11.5
 
-
 ## v0.14.0
 
 Released on: Mon Feb 4 22:04:14 2019 +0100
@@ -191,14 +182,12 @@ Released on: Mon Feb 4 22:04:14 2019 +0100
 - Support (basic) EFI
 - Support for generating cloud-init network-config
 
-
 ## v0.13.0
 
 Released on: Tue Jan 15 08:26:25 2019 +0100
 
 - CI: Fix virt-api race
 - API: Remove volumeName from disks
-
 
 ## v0.12.0
 
@@ -215,7 +204,6 @@ Released on: Fri Jan 11 22:22:02 2019 +0100
 - Support scheduling of VMs based on CPU family
 - Support masquerade network interface binding
 
-
 ## v0.11.0
 
 Released on: Thu Dec 6 10:15:51 2018 +0100
@@ -230,7 +218,6 @@ Released on: Thu Dec 6 10:15:51 2018 +0100
 - Support for custom DHCP options
 - Support for VM restarts via a custom endpoint
 - Support for liveness and readiness probes
-
 
 ## v0.10.0
 
@@ -258,7 +245,6 @@ Released on: Thu Nov 8 15:21:34 2018 +0100
 - Better ownership references
 - Several test improvements
 
-
 ## v0.9.0
 
 Released on: Thu Oct 4 14:42:28 2018 +0200
@@ -273,7 +259,6 @@ Released on: Thu Oct 4 14:42:28 2018 +0200
 - Move preset logic to mutating webhook
 - Introduce basic metrics reporting using prometheus metrics
 - Many stabilizing fixes in many places
-
 
 ## v0.8.0
 
@@ -298,7 +283,6 @@ Released on: Thu Sep 6 14:25:22 2018 +0200
   qemu)
 - Move CI to support Kubernetes 1.11
 
-
 ## v0.7.0
 
 Released on: Wed Jul 4 17:41:33 2018 +0200
@@ -308,7 +292,6 @@ Released on: Wed Jul 4 17:41:33 2018 +0200
 - CI: Improved network tests for multiple-interfaces
 - CI: Drop Origin 3.9 support
 - CI: Add test for testing templates on Origin
-
 - VM to VMI rename
 - VM affinity and anti-affinity
 - Add awareness for multiple networks
@@ -328,7 +311,6 @@ Released on: Wed Jul 4 17:41:33 2018 +0200
 - virtctl: Add expose
 - virtctl: Use PATCH instead of PUT
 
-
 ## v0.6.0
 
 Released on: Mon Jun 11 09:30:28 2018 +0200
@@ -340,7 +322,6 @@ Released on: Mon Jun 11 09:30:28 2018 +0200
 - A couple of ginkgo concurrency fixes
 - A couple of spelling fixes
 - A range if infra updates
-
 - Use /dev/kvm if possible, otherwise fallback to emulation
 - Add default view/edit/admin RBAC Roles
 - Network MTU fixes
@@ -351,7 +332,6 @@ Released on: Mon Jun 11 09:30:28 2018 +0200
 - Add virtctl expose
 - Fix virtual machine memory calculations
 - Add basic virtual machine Network API
-
 
 ## v0.5.0
 
@@ -367,7 +347,6 @@ Released on: Fri May 4 18:25:32 2018 +0200
 - Add tests coverage for node eviction
 - OfflineVirtualMachine status improvements
 - RegistryDisk API update
-
 
 ## v0.4.0
 
@@ -385,7 +364,6 @@ Released on: Fri Apr 6 16:40:31 2018 +0200
 - Major improvement to the CI infrastructure (all containerized)
 - virtctl convenience functions for starting and stopping a VM
 
-
 ## v0.3.0
 
 Released on: Thu Mar 8 10:21:57 2018 +0100
@@ -399,7 +377,6 @@ Released on: Thu Mar 8 10:21:57 2018 +0100
 - A large number of test and CI fixes
 - Ephemeral disk support
 
-
 ## v0.2.0
 
 Released on: Fri Jan 5 16:30:45 2018 +0100
@@ -409,7 +386,6 @@ Released on: Fri Jan 5 16:30:45 2018 +0100
 - Removal of HAProxy
 - Redesign of VNC/Console access
 - Initial support for different vagrant providers
-
 
 ## v0.1.0
 
@@ -423,4 +399,3 @@ Released on: Fri Dec 8 20:43:06 2017 +0100
   - Created separate manifests for developer, test, and release deployments
 - Moved komponents to kube-system namespace
 - Improved and unified flag parsing
-
