--- a/release-notes/changelog.adoc
+++ b/release-notes/changelog.adoc
@@ -1,27 +1,94 @@
 # Changelog
 
+## v0.24.0
+
+Released on: Tue Dec 3 15:34:34 2019 +0100
+
+- CI: Support for Kubernetes 1.15
+- CI: Support for Kubernetes 1.16
+- Add and fix a couple of test cases
+- Support for pause and unpausing VMs
+- Update of libvirt to 5.6.0
+- Fix bug related to parallel scraping of Prometheus endpoints
+- Fix to reliably test VNC
+
+
+## v0.23.0
+
+Released on: Mon Nov 4 16:42:54 2019 +0100
+
+- Guest OS Information is available under the VMI status now
+- Updated to Go 1.12.8 and latest bazel
+- Updated go-yaml to v2.2.4, which has a ddos vulnerability fixed
+- Cleaned up and fixed CRD scheme registration
+- Several bugfixes
+- Many CI improvements (e.g. more logs in case of test failures)
+
+
+## v0.22.0
+
+Released on: Thu Oct 10 18:55:08 2019 +0200
+
+- Support for Nvidia GPUs and vGPUs exposed by Nvidia Kubevirt Device Plugin.
+- VMIs now successfully start if they get a 0xfe prefixed MAC address assigned from the pod network
+- Removed dependency on host semanage in SELinux Permissive mode
+- Some changes as result of entering the CNCF sandbox (DCO check, FOSSA check, best practice badge)
+- Many bug fixes and improvements in several areas
+- CI: Introduced a OKD 4 test lane
+- CI: Many improved tests, resulting in less flakyness
+
+
+## v0.21.0
+
+Released on: Mon Sep 9 09:59:08 2019 +0200
+
+- CI: Support for Kubernetes 1.14
+- Many bug fixes in several areas
+- Support for `virtctl migrate`
+- Support configurable number of controller threads
+- Support to opt-out of bridge binding for podnetwork
+- Support for OpenShift Prometheus monitoring
+- Support for setting more SMBIOS fields
+- Improved containerDisk memory usage and speed
+- Fix CRI-O memory limit
+- Drop spc_t from launcher
+- Add feature gates to security sensitive features
+
+
 ## v0.20.0
 
 Released on: Fri Aug 9 16:42:41 2019 +0200
 
-- Containerdisks are now secure and they are not copied anymore on every start.
+Old containerdisks can still be used in the same secure way, but new
+containerdisks can't be used on older kubevirt releases
 - Create specific SecurityContextConstraints on OKD instead of using the
+privileged SCC
 - Added clone authorization check for DataVolumes with PVC source
 - The sidecar feature is feature-gated now
 - Use container image shasums instead of tags for KubeVirt deployments
 - Protect control plane components against voluntary evictions with a
+PodDisruptionBudget of MinAvailable=1
 - Replaced hardcoded `virtctl` by using the basename of the call, this enables
+nicer output when installed via krew plugin package manager
 - Added RNG device to all Fedora VMs in tests and examples (newer kernels might
+block bootimg while waiting for entropy)
 - The virtual memory is now set to match the memory limit, if memory limit is
+specified and guest memory is not
 - Support nftable for CoreOS
 - Added a block-volume flag to the virtctl image-upload command
 - Improved virtctl console/vnc data flow
 - Removed DataVolumes feature gate in favor of auto-detecting CDI support
 - Removed SR-IOV feature gate, it is enabled by default now
 - VMI-related metrics have been renamed from `kubevirt_vm_` to `kubevirt_vmi_`
+to better reflect their purpose
 - Added metric to report the VMI count
 - Improved integration with HCO by adding a CSV generator tool and modified
+KubeVirt CR conditions
 - CI Improvements:
+  - Added dedicated SR-IOV test lane
+  - Improved log gathering
+  - Reduced amount of flaky tests
+
 
 ## v0.19.0
 
@@ -33,6 +100,7 @@ Released on: Fri Jul 5 12:52:16 2019 +0200
 - Many additional bug fixes in many areas
 - Additional testcases for updates, disk types, live migration with NFS
 - Additional testcases for memory over-commit, block storage, cpu manager,
+headless mode
 - Improvements around HyperV
 - Improved error handling for runStartegies
 - Improved update procedure
@@ -45,6 +113,7 @@ Released on: Fri Jul 5 12:52:16 2019 +0200
 - Support for unprivileged VMs when using SR-IOV
 - Introduction of a project security policy
 
+
 ## v0.18.0
 
 Released on: Wed Jun 5 22:25:09 2019 +0200
@@ -54,6 +123,7 @@ Released on: Wed Jun 5 22:25:09 2019 +0200
 - Countless testcase fixes and additions
 - Several smaller bug fixes
 - Improved upgrade documentation
+
 
 ## v0.17.0
 
@@ -70,6 +140,7 @@ Released on: Mon May 6 16:18:01 2019 +0200
 - Support for different VM run strategies (i.e manual and rerunOnFailure)
 - Several fixes for live-migration (TLS support, protected pods)
 
+
 ## v0.16.0
 
 Released on: Fri Apr 5 23:18:22 2019 +0200
@@ -82,6 +153,7 @@ Released on: Fri Apr 5 23:18:22 2019 +0200
 - Support for table input devices
 - Support for generating OLM metadata
 - Support for triggering VM live migration on node taints
+
 
 ## v0.15.0
 
@@ -105,6 +177,7 @@ Released on: Tue Mar 5 10:35:08 2019 +0100
 - Support to set a default CPU model
 - Update to go 1.11.5
 
+
 ## v0.14.0
 
 Released on: Mon Feb 4 22:04:14 2019 +0100
@@ -118,12 +191,14 @@ Released on: Mon Feb 4 22:04:14 2019 +0100
 - Support (basic) EFI
 - Support for generating cloud-init network-config
 
+
 ## v0.13.0
 
 Released on: Tue Jan 15 08:26:25 2019 +0100
 
 - CI: Fix virt-api race
 - API: Remove volumeName from disks
+
 
 ## v0.12.0
 
@@ -140,6 +215,7 @@ Released on: Fri Jan 11 22:22:02 2019 +0100
 - Support scheduling of VMs based on CPU family
 - Support masquerade network interface binding
 
+
 ## v0.11.0
 
 Released on: Thu Dec 6 10:15:51 2018 +0100
@@ -154,6 +230,7 @@ Released on: Thu Dec 6 10:15:51 2018 +0100
 - Support for custom DHCP options
 - Support for VM restarts via a custom endpoint
 - Support for liveness and readiness probes
+
 
 ## v0.10.0
 
@@ -181,6 +258,7 @@ Released on: Thu Nov 8 15:21:34 2018 +0100
 - Better ownership references
 - Several test improvements
 
+
 ## v0.9.0
 
 Released on: Thu Oct 4 14:42:28 2018 +0200
@@ -195,6 +273,7 @@ Released on: Thu Oct 4 14:42:28 2018 +0200
 - Move preset logic to mutating webhook
 - Introduce basic metrics reporting using prometheus metrics
 - Many stabilizing fixes in many places
+
 
 ## v0.8.0
 
@@ -216,7 +295,9 @@ Released on: Thu Sep 6 14:25:22 2018 +0200
 - Race detection in tests
 - Hook improvements
 - Update to use Fedora 28 (includes updates of dependencies like libvirt and
+  qemu)
 - Move CI to support Kubernetes 1.11
+
 
 ## v0.7.0
 
@@ -227,6 +308,7 @@ Released on: Wed Jul 4 17:41:33 2018 +0200
 - CI: Improved network tests for multiple-interfaces
 - CI: Drop Origin 3.9 support
 - CI: Add test for testing templates on Origin
+
 - VM to VMI rename
 - VM affinity and anti-affinity
 - Add awareness for multiple networks
@@ -246,6 +328,7 @@ Released on: Wed Jul 4 17:41:33 2018 +0200
 - virtctl: Add expose
 - virtctl: Use PATCH instead of PUT
 
+
 ## v0.6.0
 
 Released on: Mon Jun 11 09:30:28 2018 +0200
@@ -257,6 +340,7 @@ Released on: Mon Jun 11 09:30:28 2018 +0200
 - A couple of ginkgo concurrency fixes
 - A couple of spelling fixes
 - A range if infra updates
+
 - Use /dev/kvm if possible, otherwise fallback to emulation
 - Add default view/edit/admin RBAC Roles
 - Network MTU fixes
@@ -267,6 +351,7 @@ Released on: Mon Jun 11 09:30:28 2018 +0200
 - Add virtctl expose
 - Fix virtual machine memory calculations
 - Add basic virtual machine Network API
+
 
 ## v0.5.0
 
@@ -282,6 +367,7 @@ Released on: Fri May 4 18:25:32 2018 +0200
 - Add tests coverage for node eviction
 - OfflineVirtualMachine status improvements
 - RegistryDisk API update
+
 
 ## v0.4.0
 
@@ -299,6 +385,7 @@ Released on: Fri Apr 6 16:40:31 2018 +0200
 - Major improvement to the CI infrastructure (all containerized)
 - virtctl convenience functions for starting and stopping a VM
 
+
 ## v0.3.0
 
 Released on: Thu Mar 8 10:21:57 2018 +0100
@@ -312,6 +399,7 @@ Released on: Thu Mar 8 10:21:57 2018 +0100
 - A large number of test and CI fixes
 - Ephemeral disk support
 
+
 ## v0.2.0
 
 Released on: Fri Jan 5 16:30:45 2018 +0100
@@ -322,6 +410,7 @@ Released on: Fri Jan 5 16:30:45 2018 +0100
 - Redesign of VNC/Console access
 - Initial support for different vagrant providers
 
+
 ## v0.1.0
 
 Released on: Fri Dec 8 20:43:06 2017 +0100
@@ -329,5 +418,9 @@ Released on: Fri Dec 8 20:43:06 2017 +0100
 - Many API improvements for a proper OpenAPI reference
 - Add watchdog support
 - Drastically improve the deployment on non-vagrant setups
+  - Dropped nodeSelectors
+  - Separated inner component deployment from edge component deployment
+  - Created separate manifests for developer, test, and release deployments
 - Moved komponents to kube-system namespace
 - Improved and unified flag parsing
+
